--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
+    "got": "^6.3.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
