--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/underscore": "^1.8.0",
+    "auth0-js": "^8.7.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "got": "^6.3.0",
